--- a/src/CatList/CatList.module.css
+++ b/src/CatList/CatList.module.css
@@ -6,7 +6,7 @@
 }
 
 .card {
-  width: 200px;
+  width: 250px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
@@ -49,7 +49,7 @@
 .buttons {
   display: flex;
   gap: 10px;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 @media (max-width: 600px) {
