--- a/src/ui/ImageInput/ImageInput.module.css
+++ b/src/ui/ImageInput/ImageInput.module.css
@@ -1,30 +1,31 @@
 .label {
-  width: 100%;
-  max-width: 400px;
-  height: 200px;
-  border: 2px dashed;
-  border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  cursor: pointer;
-  transition:
-    background-color 0.3s ease,
-    border-color 0.3s ease;
-  background-color: #f9f9f9;
-  color: #666;
   box-sizing: border-box;
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  gap: 20px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border: 2px dashed #cacaca;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 10px;
+  box-shadow: 0px 48px 35px -48px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  background-color: var(--field);
+}
+
+.label:hover,
+.label:focus {
+  border-color: var(--primary);
+  background-color: var(--field-focus);
 }
 
 .uploadedImage {
-  border-radius: 0.375rem;
+  border-radius: 10px;
   object-fit: cover;
   width: 100%;
   height: auto;
-}
-
-.file-input {
-  display: none;
 }
