--- a/src/ui/Input/Input.module.css
+++ b/src/ui/Input/Input.module.css
@@ -5,16 +5,17 @@
 }
 
 .input {
+  background-color: var(--field);
+  color: #1a202c;
   border: none;
-  border-radius: 4px;
-  padding: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  outline: none;
-  box-sizing: border-box;
-  width: 100%;
-  font-size: var(--font-size-normal);
+  border-radius: 10px;
+  padding: 15px 10px;
+  transition:
+    background-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
-
 .input:focus {
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  background-color: var(--field-focus);
+  outline: none;
+  box-shadow: 0 0 0 2px var(--primary);
 }
