--- a/src/ui/Modal/Modal.module.css
+++ b/src/ui/Modal/Modal.module.css
@@ -18,7 +18,7 @@
   max-width: 400px;
   overflow-y: auto;
   border-radius: 10px;
-  background-color: var(--background-primary);
+  background-color: white;
   transform: translate(-50%, -50%);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
