--- a/src/ui/ImageInput/ImageInput.module.css
+++ b/src/ui/ImageInput/ImageInput.module.css
@@ -1,6 +1,7 @@
 .label {
   box-sizing: border-box;
   height: 200px;
+  max-height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
